# mpc

./: AGENTS.md  Cargo.toml  README.md
crates/codec/: Cargo.toml
crates/codec/src/: lib.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/service/: Cargo.toml
crates/service/src/: api.rs  config.rs  lib.rs  main.rs  service.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
docs/superpowers/plans/: 2026-06-05-mpc-local-http-demo.md
docs/superpowers/specs/: 2026-06-05-mpc-local-http-demo-design.md
src/: aad.rs  api.rs  attestation.rs  crypto.rs  error.rs  lib.rs  main.rs  service.rs  state.rs  types.rs
tests/: http_flow.rs
