[package]
name = "mpc"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/types"]
resolver = "3"

[dependencies]
aes-gcm = "0.10.3"
async-trait = "0.1"
axum = "0.8.4"
base64 = "0.22.1"
ciborium = "0.2.2"
hex = "0.4"
hpke = { version = "0.13.0", features = ["std", "x25519"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
types = { path = "crates/types" }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
