[package]
name = "mpc"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
codec = { path = "../codec" }
crypto = { path = "../crypto" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
types = { path = "../types" }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
